# dubhacks25

./: .gitignore  README.md  requirements.txt  start_monitor.py
agents/: DIAGNOSTIC_AGENT_README.md  __init__.py  diagnostic_agent.py  diagnostic_agent_simplified.py  diagnostic_agent_working.py  direct_diagnostic_agent.py  flask_api.py  monitor_agent.py  quick_diagnostic.py  run_pipeline.py  shared_tools.py  solution_agent.py  test_direct.py
data/: .gitkeep
dubhacks/: README.md  pyproject.toml
dubhacks/src/dubhacks/: crew.py  main.py
frontend/src/: App.css  App.js
