[project]
name = "dubhacks"
version = "0.1.0"
description = "dubhacks using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
dubhacks = "dubhacks.main:run"
run_crew = "dubhacks.main:run"
train = "dubhacks.main:train"
replay = "dubhacks.main:replay"
test = "dubhacks.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
